language slug fix
